fixed alignment of the album title

--- a/style.css
+++ b/style.css
@@ -147,6 +147,7 @@ ul li {
 	height: 10vh;
 	font-size: 2rem;
 	margin-top: 5rem;
+	text-align: center;
 }
 
 .album-covers {
